<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_driver_home"
            android:title="@string/home"
            android:icon="@drawable/ic_nav_home"/>



    </group>

    <group android:checkableBehavior="single">

        <item android:title="Profile">
            <menu>
                <item android:id="@+id/nav_driver_profile"
                    android:title="@string/Profile"
                    android:icon="@drawable/ic_portrait"/>

                <item android:title="@string/logout"
                    android:id="@+id/nav_driver_logout"
                    android:icon="@drawable/ic_logout"
                    />

            </menu>

        </item>
    </group>



</menu>